--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_storage: ^11.5.3
   flutter:
     sdk: flutter
+  flutter_state_notifier: ^1.0.0
   flutter_svg: ^2.0.9
   google_sign_in: ^6.1.6
   provider: ^6.1.1
